[gd_scene load_steps=15 format=3 uid="uid://d3fe8jviyaeeu"]

[ext_resource type="Script" path="res://scripts/hud.gd" id="1_ujkja"]
[ext_resource type="FontFile" uid="uid://dovl88s32u4ax" path="res://assets/font/joystix monospace.otf" id="1_uo3cy"]
[ext_resource type="PackedScene" uid="uid://6sb2adg1gr80" path="res://scenes/fade.tscn" id="2_uhh23"]
[ext_resource type="Texture2D" uid="uid://7g0eglco7lsv" path="res://assets/bg/Asset 46.png" id="4_wg71h"]
[ext_resource type="Shader" path="res://scripts/blur.gdshader" id="5_80r33"]
[ext_resource type="Texture2D" uid="uid://ccms3tgwqk21i" path="res://assets/bg/Asset 48.png" id="6_y214v"]
[ext_resource type="Texture2D" uid="uid://buxv121huyn1o" path="res://assets/bg/Asset 47.png" id="7_cc40r"]
[ext_resource type="Texture2D" uid="uid://bwqh4ftyjxrq6" path="res://assets/bg/Asset 49.png" id="7_j1rgt"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_udkox"]
shader = ExtResource("5_80r33")
shader_parameter/lod = 0.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_f1w7p"]
bg_color = Color(0.929412, 0.133333, 0.141176, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ilf0a"]
bg_color = Color(0.929412, 0.133333, 0.141176, 1)

[sub_resource type="Animation" id="Animation_1lh1q"]
resource_name = "blur"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.9]
}

[sub_resource type="Animation" id="Animation_3wups"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6pe3w"]
_data = {
"RESET": SubResource("Animation_3wups"),
"blur": SubResource("Animation_1lh1q")
}

[node name="HUD" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_ujkja")

[node name="Fade" parent="." instance=ExtResource("2_uhh23")]

[node name="ScoreLabel" type="Label" parent="."]
visible = false
offset_left = 9.0
offset_top = 8.0
offset_right = 79.0
offset_bottom = 59.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 9
theme_override_fonts/font = ExtResource("1_uo3cy")
theme_override_font_sizes/font_size = 24
text = "0M
"

[node name="ColorRect" type="ColorRect" parent="."]
process_mode = 3
material = SubResource("ShaderMaterial_udkox")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.27451)

[node name="PauseButton" type="Button" parent="."]
process_mode = 3
visible = false
custom_minimum_size = Vector2(82, 80)
offset_left = 1048.0
offset_top = 24.0
offset_right = 1130.0
offset_bottom = 104.0
action_mode = 0

[node name="Sprite2D" type="Sprite2D" parent="PauseButton"]
visible = false
position = Vector2(40.5, 40)
texture = ExtResource("6_y214v")

[node name="Sprite2D2" type="Sprite2D" parent="PauseButton"]
position = Vector2(40.5, 40)
texture = ExtResource("7_cc40r")

[node name="PauseMenu" type="Control" parent="."]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="PauseMenu"]
custom_minimum_size = Vector2(230, 230)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_f1w7p")

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -103.0
offset_top = -100.0
offset_right = 103.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 7

[node name="ResumeButton" type="Button" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 13
theme_override_fonts/font = ExtResource("1_uo3cy")
theme_override_font_sizes/font_size = 40
text = "Resume"

[node name="QuitButton" type="Button" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 13
theme_override_fonts/font = ExtResource("1_uo3cy")
theme_override_font_sizes/font_size = 40
text = "Quit
"

[node name="HBoxContainer" type="HBoxContainer" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="RestartButton" type="Button" parent="PauseMenu/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_uo3cy")
theme_override_font_sizes/font_size = 40
icon = ExtResource("7_j1rgt")
icon_alignment = 1

[node name="SettingsButton" type="Button" parent="PauseMenu/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
icon = ExtResource("4_wg71h")
icon_alignment = 1

[node name="GameOverMenu" type="Control" parent="."]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="GameOverMenu"]
custom_minimum_size = Vector2(600, 300)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -290.0
offset_right = 290.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ilf0a")

[node name="GameOver" type="VBoxContainer" parent="GameOverMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -290.0
offset_top = -126.0
offset_right = 290.0
offset_bottom = 126.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameOverLabel" type="Label" parent="GameOverMenu/GameOver"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 13
theme_override_fonts/font = ExtResource("1_uo3cy")
theme_override_font_sizes/font_size = 70
text = "Game OVER!"
horizontal_alignment = 1

[node name="HighScoreLabel" type="Label" parent="GameOverMenu/GameOver"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 11
theme_override_fonts/font = ExtResource("1_uo3cy")
theme_override_font_sizes/font_size = 40
text = "HIGH SCORE:"
horizontal_alignment = 1

[node name="ScoredLabel" type="Label" parent="GameOverMenu/GameOver"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 11
theme_override_fonts/font = ExtResource("1_uo3cy")
theme_override_font_sizes/font_size = 40
text = "SCORE:"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="GameOverMenu/GameOver"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Restart" type="Button" parent="GameOverMenu/GameOver/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_colors/font_hover_color = Color(1, 1, 0, 1)
theme_override_colors/font_focus_color = Color(0.976471, 0.929412, 0.0666667, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 11
theme_override_fonts/font = ExtResource("1_uo3cy")
theme_override_font_sizes/font_size = 40
icon = ExtResource("7_j1rgt")
icon_alignment = 1

[node name="SettingsButton" type="Button" parent="GameOverMenu/GameOver/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
action_mode = 0
icon = ExtResource("4_wg71h")
icon_alignment = 1

[node name="Quit" type="Button" parent="GameOverMenu/GameOver/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(1, 0, 0, 1)
theme_override_colors/font_focus_color = Color(1, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 11
theme_override_fonts/font = ExtResource("1_uo3cy")
theme_override_font_sizes/font_size = 40
text = "Quit
"

[node name="GameReadyMenu" type="Control" parent="."]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameReady" type="VBoxContainer" parent="GameReadyMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -377.0
offset_top = -42.0
offset_right = 377.0
offset_bottom = 42.0
grow_horizontal = 2
grow_vertical = 2

[node name="ReadyLabel" type="Label" parent="GameReadyMenu/GameReady"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 13
theme_override_fonts/font = ExtResource("1_uo3cy")
theme_override_font_sizes/font_size = 70
text = "YO GET READY!
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SettingsButton" type="Button" parent="GameReadyMenu"]
custom_minimum_size = Vector2(82, 80)
layout_mode = 2
offset_left = 1000.0
offset_top = 456.0
offset_right = 1082.0
offset_bottom = 536.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 8
size_flags_vertical = 8
icon = ExtResource("4_wg71h")

[node name="SettingsMenu" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="SettingsMenu"]
custom_minimum_size = Vector2(250, 100)
layout_mode = 2
offset_left = 240.0
offset_top = 324.0
offset_right = 912.0
offset_bottom = 424.0
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="SettingsMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 256
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 256

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsMenu/MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 0

[node name="GridContainer" type="GridContainer" parent="SettingsMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/h_separation = 16
columns = 2

[node name="MusicLabel" type="Label" parent="SettingsMenu/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 11
theme_override_fonts/font = ExtResource("1_uo3cy")
theme_override_font_sizes/font_size = 40
text = "Music"

[node name="MusicSlider" type="HSlider" parent="SettingsMenu/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.05
value = 1.0

[node name="SFXLabel" type="Label" parent="SettingsMenu/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 11
theme_override_fonts/font = ExtResource("1_uo3cy")
theme_override_font_sizes/font_size = 40
text = "SFX
"

[node name="SFXSlider" type="HSlider" parent="SettingsMenu/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.05
value = 1.0

[node name="HBoxContainer" type="HBoxContainer" parent="SettingsMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -45.5
offset_top = 124.0
offset_right = 45.5
offset_bottom = 155.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 13

[node name="BackButton" type="Button" parent="SettingsMenu/HBoxContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 13
theme_override_fonts/font = ExtResource("1_uo3cy")
theme_override_font_sizes/font_size = 40
text = "Back"

[node name="QuitButton" type="Button" parent="SettingsMenu/HBoxContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 13
theme_override_fonts/font = ExtResource("1_uo3cy")
theme_override_font_sizes/font_size = 40
text = "Quit
"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
process_mode = 3
libraries = {
"": SubResource("AnimationLibrary_6pe3w")
}

[connection signal="pressed" from="PauseButton" to="." method="_on_pause_pressed"]
[connection signal="pressed" from="PauseMenu/VBoxContainer/ResumeButton" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PauseMenu/VBoxContainer/QuitButton" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="PauseMenu/VBoxContainer/HBoxContainer/RestartButton" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="GameOverMenu/GameOver/HBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="GameOverMenu/GameOver/HBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="GameOverMenu/GameOver/HBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="value_changed" from="SettingsMenu/MarginContainer/VBoxContainer/GridContainer/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="SettingsMenu/MarginContainer/VBoxContainer/GridContainer/SFXSlider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="pressed" from="SettingsMenu/HBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="SettingsMenu/HBoxContainer/QuitButton" to="." method="_on_quit_pressed"]
